--- a/index.html
+++ b/index.html
@@ -17,7 +17,33 @@
   </style>
 </head>
 <body>
-  <h1>Dobrodošli na WebsiteCraft</h1>
+  <h1>Welcome to WebsiteCraft
+We specialize in creating high-quality, user-friendly websites and applications. With expertise in HTML, CSS, and JavaScript, we bring your ideas to life with responsive and interactive designs. Whether you're looking to build a personal portfolio, an online store, or a corporate website, we're here to make your vision a reality.
+
+Our Services:
+
+Front-End Development
+
+Responsive Web Design
+
+UI/UX Design
+
+Custom Websites
+
+JavaScript Development
+
+Why Choose Us?
+
+Skilled in the latest web technologies
+
+Focused on clean, maintainable code
+
+Passionate about creating exceptional user experiences
+
+Dedicated to delivering on time and on budget
+
+Contact Us
+Let's discuss your next project. Together, we can create something amazing.</h1>
   <p>Ovde ćeš naučiti front-end kroz pravi rad.</p>
 </body>
 </html>
